--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,301 @@
-/* место для вашего кода */
+html {
+    scroll-behavior: smooth;
+}
+
+.header {
+    height: 293px;
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+    font-size: 18px;
+}
+
+.header__menu {
+    padding-left: 50px;
+}
+
+.header__links-list {
+    display: flex;
+    gap: 33px;
+    list-style: circle;
+    line-height: 1.2;
+    font-size: 18px;
+}
+
+.header__links-list li:first-child {
+    list-style-type: none;
+}
+
+.header__logo {
+    width: 148px;
+    height: 105px;
+}
+
+.header__address {
+    margin-left: 184px;
+    max-width: 240px;
+    line-height: 1.35;
+    font-size: 18px;
+}
+
+.link__active {
+    text-decoration: none;
+}
+
+.link__inactive {
+    text-underline-offset: 4px;
+}
+
+.cover {
+    background-image: url(../images/cover.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    min-height: 757px;
+    overflow: hidden;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 0.6);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.cover__title {
+    padding: 165px 50px 106px;
+    display: flex;
+    flex-direction: column;
+    font-size: 100px;
+    font-weight: 700;
+    color: #fff;
+    letter-spacing: 0.3em;
+    line-height: 1.15;
+    position: relative;
+}
+
+.no-letter-spacing {
+    letter-spacing: normal;
+}
+
+.align-text-left {
+    margin-bottom: 20px;
+}
+
+.aligned-text-center {
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.aligned-text-right {
+    margin-left: auto;
+}
+
+.cover__description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px 50px 50px;
+    position: relative;
+}
+
+.cover__description-text {
+    color: #fff;
+    font-size: 22px;
+    text-transform: uppercase;
+    line-height: 1.3;
+    word-spacing: 20px;
+}
+
+.bet-button {
+    width: 256px;
+    height: 51px;
+    color: #fff;
+    font-size: 22px;
+    font-weight: 500;
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 1px solid #fff;
+    cursor: pointer;
+    line-height: 1.2;
+}
+
+.lots {
+    margin: 180px 24px 0;
+}
+
+.lots__title {
+    padding-left: 40px;
+    padding-bottom: 27px;
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.lots__card-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style-type: none;
+}
+
+.lots__card-list-item {
+    width: 334px;
+    min-height: 596px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.card-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+}
+
+.card {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.card__title {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: underline;
+    padding: 48px 40px 0 40px;
+}
+
+.card__text {
+    font-size: 20px;
+    line-height: 1.2;
+    color: #fff;
+    padding: 0px 40px 48px 40px;
+}
+
+.lots__look-more-link {
+    padding-left: 40px;
+    font-size: 20px;
+    line-height: 1.2;
+}
+
+.about {
+    margin: 120px 24px 0;
+    display: grid;
+    grid-template-columns: 334px auto;
+    gap: 25px;
+}
+
+.about__column_logo {
+    margin-top: 35px;
+}
+
+.about__column_description {
+    padding-top: 133px;
+}
+
+.about__logo {
+    width: 240px;
+    height: 240px;
+    margin: auto;
+    background-color: #000;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about__logo_img {
+    width: 148px;
+    height: 114px;
+}
+
+.about__title {
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.2;
+    padding-bottom: 100px;
+
+}
+
+.about__text {
+    font-size: 20px;
+    line-height: 1.2;
+}
+
+.about__text p {
+    margin-bottom: 24px;
+}
+
+.about__text p:last-child {
+    margin-bottom: 0;
+}
+
+.footer {
+    margin-top: 180px;
+    padding: 0 50px 82px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.footer__address {
+    justify-self: start;
+    max-width: 265px;
+    line-height: 1.35;
+    font-size: 18px;
+}
+
+.footer__menu {
+    justify-self: center;
+}
+
+.footer__menu-list {
+    list-style-type: none;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.2;
+}
+
+.footer__social-list {
+    justify-self: end;
+    list-style-type: none;
+    display: flex;
+    gap: 48px;
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
+}
