--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ html {
 .overlay {
     position: absolute;
     top: 0;
-    left 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgb(0 0 0 / 0.6);
