--- a/styles/style.css
+++ b/styles/style.css
@@ -3,15 +3,11 @@ html {
 }
 
 .header {
-    height: 293px;
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
     font-size: 18px;
-}
-
-.header__menu {
-    padding-left: 50px;
+    padding: 92px 50px 96px;
 }
 
 .header__links-list {
@@ -31,19 +27,23 @@ html {
     height: 105px;
 }
 
-.header__address {
-    margin-left: 184px;
-    max-width: 240px;
-    line-height: 1.35;
+.address {
     font-size: 18px;
+    line-height: 1.35;
+    font-style: normal;
+}
+
+.header__address {
+    max-width: 240px;
+    justify-self: end;
+}
+
+.link {
+    text-underline-offset: 4px;
 }
 
 .link__active {
     text-decoration: none;
-}
-
-.link__inactive {
-    text-underline-offset: 4px;
 }
 
 .cover {
@@ -53,7 +53,6 @@ html {
     background-repeat: no-repeat;
     position: relative;
     min-height: 757px;
-    overflow: hidden;
 }
 
 .overlay {
@@ -79,6 +78,8 @@ html {
     letter-spacing: 0.3em;
     line-height: 1.15;
     position: relative;
+    z-index: 2;
+    text-transform: uppercase;
 }
 
 .no-letter-spacing {
@@ -104,6 +105,7 @@ html {
     align-items: center;
     padding: 0 50px 50px 50px;
     position: relative;
+    z-index: 2;
 }
 
 .cover__description-text {
@@ -122,9 +124,10 @@ html {
     font-weight: 500;
     text-transform: uppercase;
     background-color: transparent;
-    border: 1px solid #fff;
+    border: 1px solid currentColor;
     cursor: pointer;
     line-height: 1.2;
+    z-index: 2;
 }
 
 .lots {
@@ -142,6 +145,7 @@ html {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    row-gap: 25px;
     list-style-type: none;
 }
 
@@ -149,7 +153,6 @@ html {
     width: 334px;
     min-height: 596px;
     position: relative;
-    overflow: hidden;
     margin-bottom: 30px;
 }
 
@@ -164,27 +167,21 @@ html {
     width: 100%;
     height: 100%;
     position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .card_type_film {
     background-image: url(../images/card-lot-01.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
 
 .card_type_book {
     background-image: url(../images/card-lot-02.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
 
 .card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
 
 .card__title {
@@ -271,10 +268,8 @@ html {
 }
 
 .footer__address {
-    justify-self: start;
     max-width: 265px;
-    line-height: 1.35;
-    font-size: 18px;
+    justify-self: start;
 }
 
 .footer__menu {
